force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Account_ERP_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_ERP_Number__c</fullName>
    <description>Field to store the Account's erp number</description>
    <formula>Apttus__Account__r.ERP_Customer_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account ERP Number</label>
    <type>Text</type>
</CustomField>