force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Account_National_Group_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_National_Group_Number__c</fullName>
    <description>Field to store Account&apos;s National Group Number</description>
    <formula>Apttus__Account__r.National_Group_Number__c</formula>
    <label>Account National Group Number</label>
    <type>Text</type>
</CustomField>