force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Account_Region__c.field-meta.xml
<CustomField>
    <fullName>Account_Region__c</fullName>
    <description>Field to store the Account's region</description>
    <label>Account Region</label>
    <length>10</length>
    <type>Text</type>
</CustomField>