force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/ACI_Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>ACI_Additional_Information__c</fullName>
    <businessOwnerGroup>Sales_Schema_Owners</businessOwnerGroup>
    <description>ACI-Additional Information</description>
    <label>ACI-Additional Information</label>
    <length>26</length>
    <type>Text</type>
</CustomField>