force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Action_Date__c.field-meta.xml
<CustomField>
    <fullName>Action_Date__c</fullName>
    <description>Saves date of SAP action performed</description>
    <label>Action Date</label>
    <type>Date</type>
</CustomField>