force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Activate_Custom__c.field-meta.xml
<CustomField>
    <fullName>Activate_Custom__c</fullName>
    <description>Field to hide this button from Lightning Actions component</description>
    <formula>&quot;&quot;</formula>
    <label>Activate_Custom</label>
    <type>Text</type>
</CustomField>