force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Additional_Freight_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Freight_Information__c</fullName>
    <businessOwnerGroup>Sales_Schema_Owners</businessOwnerGroup>
    <description>Indicate in detail what freight charge was negotiated</description>
    <label>Additional Freight Information</label>
    <length>30</length>
    <type>Text</type>
</CustomField>