force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Additional_Output_Language__c.field-meta.xml
<CustomField>
    <fullName>Additional_Output_Language__c</fullName>
    <description>Field to store the Agreement's output language</description>
    <label>Additional Output Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Japanese</fullName>
            </value>
            <value>
                <fullName>Chinese</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>