force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Agreement_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Agreement_End_Date__c</fullName>
    <description>Field to store the Agreement's end date</description>
    <formula>IF (
NOT(ISBLANK( Apttus__Contract_End_Date__c )),
( CASE ( MONTH ( Apttus__Contract_End_Date__c ) ,
1, $Label.MonthJan,
2, $Label.MonthFeb,
3, $Label.MonthMar,
4, $Label.MonthApr,
5, $Label.MonthMay,
6, $Label.MonthJun,
7, $Label.MonthJul,
8, $Label.MonthAug,
9, $Label.MonthSep,
10, $Label.MonthOct,
11, $Label.MonthNov,
$Label.MonthDec)) +&apos; &apos;+Text ( DAY( Apttus__Contract_End_Date__c ) )+&apos; &apos;+Text (YEAR ( Apttus__Contract_End_Date__c ) ),Null)</formula>
    <label>Agreement End Date</label>
    <type>Text</type>
</CustomField>