force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Agreement_Not_Amended__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Not_Amended__c</fullName>
    <defaultValue>true</defaultValue>
    <description>DCP-39587 Field created to identify if agreement is amended/renewed.</description>
    <label>Agreement Not Amended</label>
    <type>Checkbox</type>
</CustomField>