force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Agreement_Start_Year__c.field-meta.xml
<CustomObject>  
        <fullName>Agreement_Start_Year__c</fullName>
        <description>Field to capture year for terms on CPA template</description>
        <formula>TEXT(YEAR(Apttus__Contract_Start_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agreement Start Year</label>
        <type>Text</type>
</CustomObject>