force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Agreement_Type__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Type__c</fullName>
    <description>Agreement Type</description>
    <inlineHelpText>Supply: Buy/sell product; Service: Provide a service; Dev: MFG by ILMN &amp;/or the partner or co-MFG; Market: both companies promote; Lic: ILMN grants/granted right(s) to dev or build using ILMN core tech; Divest: product, process, or knowledge to ext.party</inlineHelpText>
    <label>Agreement Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Supply</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Develop</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>License</fullName>
            </value>
            <value>
                <fullName>Divesture</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>