force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/ALIs_with_UC_Material_Discount__c.field-meta.xml
<CustomField>
    <fullName>ALIs_with_UC_Material_Discount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Count of the numer of line items with UC Material Discount % - DCP-47006</description>
    <label>ALIs with UC Material Discount %</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>