force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/ALIs_with_UC_Material_Fixed_Price__c.field-meta.xml
<CustomField>
    <fullName>ALIs_with_UC_Material_Fixed_Price__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Count of the number of line items with  UC Material Fixed Price - DCP-47006</description>
    <label>ALIs with UC Material Fixed Price</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>