force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Amend_Renew_Line_Item_Status__c.field-meta.xml
<CustomField>
    <fullName>Amend_Renew_Line_Item_Status__c</fullName>
    <description>DCP-39587 Field to display status of line items insertion on amend/renew.</description>
    <formula>IF(
   AND(NOT( Agreement_Not_Amended__c ),NOT( Amend_Batch_Completed__c )),
    $Label.UI_AgreementAmendLineItemMessage ,&apos;&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amend Renew Line Item Status</label>
    <type>Text</type>
</CustomField>