force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Amendment_Reason__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Reason__c</fullName>
    <description>This field is to capture the reason for amendment of an Open Offer Agreement</description>
    <inlineHelpText>Reason for Amending the Agreement</inlineHelpText>
    <label>Amendment Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Updates to your corporate Affiliates</fullName>
            </value>
            <value>
                <fullName>Updates to your Open offer Election</fullName>
            </value>
            <value>
                <fullName>Updates to the supplied products table</fullName>
            </value>
            <value>
                <fullName>Updates to the terms and conditions</fullName>
            </value>
            <value>
                <fullName>Updates to your pricing for the supplied products</fullName>
            </value>
            <value>
                <fullName>Updates to Open offer UG</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>