force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Applicable_Region_s__c.field-meta.xml
<CustomField>
    <fullName>Applicable_Region_s__c</fullName>
    <businessOwnerGroup>Sales_Schema_Owners</businessOwnerGroup>
    <description>Which region does this agreement apply to?  It can be multiple regions.</description>
    <label>Applicable Region(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AMR</fullName>
            </value>
            <value>
                <fullName>EUR</fullName>
            </value>
            <value>
                <fullName>AMEA</fullName>
            </value>
            <value>
                <fullName>GC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>