force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/ApplicableTermsandConditions__c.field-meta.xml
<CustomField>
    <fullName>ApplicableTermsandConditions__c</fullName>
    <businessOwnerGroup>Sales_Schema_Owners</businessOwnerGroup>
    <description>This is a list of Illumina&apos;s Agreement templates or types</description>
    <label>Applicable Terms and Conditions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RUO</fullName>
            </value>
            <value>
                <fullName>IVD</fullName>
            </value>
            <value>
                <fullName>Oncology</fullName>
            </value>
            <value>
                <fullName>Services(Non-Clinical Lab Services)</fullName>
            </value>
            <value>
                <fullName>Services (Professional Services)</fullName>
            </value>
            <value>
                <fullName>VeriSeq NIPT (RUO Labeled)</fullName>
            </value>
            <value>
                <fullName>Warranty Services</fullName>
            </value>
            <value>
                <fullName>Correlation Engine &amp; Cohort Analyzer</fullName>
            </value>
            <value>
                <fullName>BasSpace Sequencing Hub</fullName>
            </value>
            <value>
                <fullName>DRAGEN</fullName>
            </value>
            <value>
                <fullName>Clarity LIMS</fullName>
            </value>
            <value>
                <fullName>COVIDSeq EUA (US only)</fullName>
            </value>
            <value>
                <fullName>Emedgene</fullName>
            </value>
            <value>
                <fullName>Explify RPIP Analysis App</fullName>
            </value>
            <value>
                <fullName>Illumina Advantage Products</fullName>
            </value>
            <value>
                <fullName>Illumina Connected Analytics</fullName>
            </value>
            <value>
                <fullName>Illumina Training Courses</fullName>
            </value>
            <value>
                <fullName>VeriSeq NIPT (CE-IVD) (EU Only)</fullName>
            </value>
            <value>
                <fullName>Microarray Analysis &amp; Report</fullName>
            </value>
            <value>
                <fullName>Master Agreement</fullName>
            </value>
            <value>
                <fullName>Tender</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>