force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Approval_Category__c.field-meta.xml
<CustomField>
    <fullName>Approval_Category__c</fullName>
    <description>Field to store the Approval's category</description>
    <label>Approval Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Channel_Partner_Term_Sheet_Approval</fullName>
                <label>Channel Partner Term Sheet Approval</label>
            </value>
            <value>
                <fullName>Master_Service_Term_Sheet_Approval</fullName>
                <label>Master Service Term Sheet Approval</label>
            </value>
            <value>
                <fullName>Channel_Partner_One_Time_Approval</fullName>
            </value>
            <value>
                 <fullName>Post_Pricing_Message</fullName>
            </value>
            <value>
                <fullName>FREIGHT_APPROVAL</fullName>
           </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>