force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Approval_Hierarchy_Discount__c.field-meta.xml
<CustomField>
    <fullName>Approval_Hierarchy_Discount__c</fullName>
    <description>Field to store the Agreement's hierarchy discount</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approval Hierarchy(Discount)</label>
    <referenceTo>Approval_Hierarchy__c</referenceTo>
    <relationshipLabel>Agreements</relationshipLabel>
    <relationshipName>Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>