force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Approval_Request_Present__c.field-meta.xml
<CustomField>
    <fullName>Approval_Request_Present__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field indicates if there are any approval requests present on agreement</description>
    <label>Approval Request Present?</label>
    <type>Checkbox</type>
</CustomField>