force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Apttus__Status__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Status__c</fullName>
    <description>The sub stage of an agreement – the status underneath a given status category.  These are generally modifiable by the customer except for the following values which are Apttus reserved to manage agreement lifecycles:

Request, Submitted Request,
Cancelled Request, In Amendment, Being Amended, Superseded, Activated, Expired, Internal Signatures, Author Contract, Expired, Terminated,  Ready for Signatures, Fully Signed, Signature Declined</description>
    <inlineHelpText>This field states the current sub process of within the lifecycle of the Agreement.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Apttus__Status_Category__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Request</fullName>
                <default>true</default>
                <label>Request</label>
            </value>
            <value>
                <fullName>Request Approval</fullName>
            </value>
            <value>
                <fullName>Submitted Request</fullName>
            </value>
            <value>
                <fullName>Approved Request</fullName>
            </value>
            <value>
                <fullName>Cancelled Request</fullName>
            </value>
            <value>
                <fullName>In Amendment</fullName>
            </value>
            <value>
                <fullName>Author Contract</fullName>
            </value>
            <value>
                <fullName>Language Approval</fullName>
            </value>
            <value>
                <fullName>Language Approved</fullName>
            </value>
            <value>
                <fullName>Internal Signatures</fullName>
            </value>
            <value>
                <fullName>Other Party Signatures</fullName>
            </value>
            <value>
                <fullName>Activated</fullName>
            </value>
            <value>
                <fullName>Being Amended</fullName>
            </value>
            <value>
                <fullName>Being Renewed</fullName>
            </value>
            <value>
                <fullName>In Renewal</fullName>
            </value>
            <value>
                <fullName>Superseded</fullName>
            </value>
            <value>
                <fullName>Being Terminated</fullName>
            </value>
            <value>
                <fullName>Terminated</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>In Reconciliation</fullName>
            </value>
            <value>
                <fullName>Reconciled</fullName>
            </value>
            <value>
                <fullName>Internal Review</fullName>
            </value>
            <value>
                <fullName>Other Party Review</fullName>
            </value>
            <value>
                <fullName>Signature Declined</fullName>
            </value>
            <value>
                <fullName>Ready for Signatures</fullName>
            </value>
            <value>
                <fullName>Fully Signed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>