force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Apttus__Subtype__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Subtype__c</fullName>
    <description>The subtype of the agreement for a given agreement type</description>
    <label>Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Japan</fullName>
            </value>
            <value>
                <fullName>One Time</fullName>
            </value>
            <value>
                <fullName>Non-Standard</fullName>
            </value>
            <value>
                <fullName>Lead Gen</fullName>
            </value>
            <value>
                <fullName>Customized Agreement</fullName>
            </value>
            <value>
                <fullName>Pricing Agreement</fullName>
            </value>
            <value>
                <fullName>Customer Terms</fullName>
            </value>
            <value>
                <fullName>Termed</fullName>
            </value>
            <value>
                <fullName>One Time Sale</fullName>
            </value>
            <value>
                <fullName>One Time Sale &amp; Termed</fullName>
            </value>
            <value>
                <fullName>IHPP</fullName>
            </value>
            <value>
                <fullName>Reagent Rental</fullName>
            </value>
            <value>
                <fullName>Indirect</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>