force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Apttus_Echosign__Send_For_eSignature__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Echosign__Send_For_eSignature__c</fullName>
    <description>Send document to external party using EcoSign integration</description>
    <formula>IF(OR(ISPICKVAL(Apttus__Status_Category__c,&quot;In Authoring&quot;), AND(ISPICKVAL(Apttus__Status_Category__c,&quot;In Signatures&quot;), ISPICKVAL(Apttus__Status__c,&quot;Ready for Signatures&quot;)), AND(ISPICKVAL(Apttus__Status_Category__c,&quot;In Signatures&quot;), ISPICKVAL(Apttus__Status__c,&quot;Signature Declined&quot;))), IF(OR($User.UIThemeDisplayed == &apos;Theme4d&apos;, $User.UIThemeDisplayed == &apos;Theme4t&apos;, $User.UIThemeDisplayed == &apos;Theme4u&apos;), HYPERLINK(&quot;/apex/Apttus_Echosign__LightningSelectAttachment?targetPageURL=/apex/Apttus_Echosign__EchoSignInfoEdit&amp;id=&quot;&amp;Id, IMAGE(&quot;/resource/Apttus_Echosign__eSignature&quot;,&quot;Send To Other Party For eSignatures&quot;), &quot;_self&quot;), HYPERLINK(&quot;/apex/Apttus_Echosign__SelectAttachment?targetPageURL=/apex/Apttus_Echosign__EchoSignInfoEdit&amp;id=&quot;&amp;Id, IMAGE(&quot;/resource/Apttus_Echosign__eSignature&quot;,&quot;Send To Other Party For eSignatures&quot;), &quot;_self&quot;)), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Send For eSignature</label>
    <type>Text</type>
</CustomField>