force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Books_and_Records_Audit__c.field-meta.xml
<CustomField>
    <fullName>Books_and_Records_Audit__c</fullName>
    <businessOwnerGroup>Sales_Schema_Owners</businessOwnerGroup>
    <defaultValue>false</defaultValue>
    <description>Books and Records Audit</description>
    <label>Books and Records Audit</label>
    <type>Checkbox</type>
</CustomField>