force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Cancel_Request__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Request__c</fullName>
    <description>Integration Action button to cancel Agreement.</description>
    <formula>IF(
 AND(
  OR(
     ISPICKVAL(Apttus__Status_Category__c,&quot;Request&quot;), ISPICKVAL(Apttus__Status_Category__c,&quot;In Authoring&quot;),
     ISPICKVAL(Apttus__Status_Category__c,&quot;In Signatures&quot;)
    ),
  NOT(ISPICKVAL(Apttus__Status__c,&quot;Cancelled Request&quot;)), 
  OR(ISBLANK(Validation_Status__c),NOT(CONTAINS(Validation_Status__c,&quot;In Progress&quot;)))
),
HYPERLINK(&quot;/lightning/cmp/c__AgreementActionComponent?c__AgreementId=&quot;+Id+&quot;&amp;c__Action=Cancel&quot;, IMAGE(&quot;/resource/Apttus__Button_CancelRequest&quot;, &quot;Cancel Request&quot;), &quot;_self&quot;)
,null
)</formula>
    <label>Cancel Request</label>
    <type>Text</type>
</CustomField>