force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Change_Notification_POC__c.field-meta.xml
<CustomField>
    <fullName>Change_Notification_POC__c</fullName>
    <description>Change Notification POC</description>
    <label>Change Notification POC</label>
    <length>80</length>
    <type>Text</type>
</CustomField>