force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Change_to_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Change_to_Payment_Terms__c</fullName>
    <description>Field to store the to Payment Terms</description>
    <defaultValue>false</defaultValue>
    <label>Change to Payment Terms</label>
    <type>Checkbox</type>
</CustomField>