force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Clarification_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Clarification_Deadline__c</fullName>
    <description>Field to store Clarification Deadline</description>
    <label>Clarification Deadline</label>
    <type>DateTime</type>
</CustomField>