force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Clinical_Type__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Type__c</fullName>
    <description>Created as part of DCP-35157 (CLM Project)</description>
    <inlineHelpText>When applicable, indicates the nature of entity's work within the clinical space; used for segmentation.  Terms and regional use:  "Clinical" (All); "Non Clinical" (All); "Healthcare Prime" (AMR); "IVD Partner" (GC); "Platform Distributor" (GC).</inlineHelpText>
    <label>Clinical Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Clinical_Type</valueSetName>
    </valueSet>
</CustomField>