force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <description>Field to Populate Company Address from Metadata. Developed for DCP -33550</description>
    <label>Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>